--- a/src/main/webapp/i18n/pt-br/user-management.json
+++ b/src/main/webapp/i18n/pt-br/user-management.json
@@ -8,8 +8,10 @@
     "created": "Novo usuário foi criado com o identificador {{ param }}",
     "updated": "Usuário com o identificador {{ param }} foi atualizado ",
     "deleted": "Usuário com o identificador {{ param }} foi excluído",
+    "deletedMultiple": "Usuários excluidos com sucesso",
     "delete": {
-      "question": "Você tem certeza que deseja excluir o usuário {{ login }}?"
+      "question": "Você tem certeza que deseja excluir o usuário {{ login }}?",
+      "questionAll": "Você tem certeza que deseja excluir os usuários marcados?"
     },
     "detail": {
       "title": "Usuário"
