--- a/src/main/webapp/i18n/pt-br/global.json
+++ b/src/main/webapp/i18n/pt-br/global.json
@@ -107,7 +107,8 @@
       }
     },
     "field": {
-      "id": "Código"
+      "id": "Código",
+      "upload": "Carregar"
     },
     "ribbon": {
       "dev": "Desenvolvimento"
