--- a/src/main/webapp/i18n/pt-br/produto.json
+++ b/src/main/webapp/i18n/pt-br/produto.json
@@ -11,7 +11,8 @@
       "updated": "Um Produto foi atualizado com o identificador {{ param }}",
       "deleted": "Um Produto foi excluído com o identificador {{ param }}",
       "delete": {
-        "question": "Tem certeza de que deseja excluir Produto {{ id }}?"
+        "question": "Tem certeza de que deseja excluir Produto {{ id }}?",
+        "questionAll": "Você tem certeza que deseja excluir os produtos marcados?"
       },
       "detail": {
         "title": "Produto"
